...
    <string name = "str_something_wrong">Something went wrong</string>
    <string name = "logout">Logout</string>
    <string name = "str_enter_name">Enter Name</string>
    <string name = "str_enter_email">Enter Email</string>
    <string name = "str_enter_password">Enter Password</string>
    <string name = "str_enter_confirm_password">Enter Confirm Password</string>
    <string name = "str_register">SignUp</string>
    <string name = "str_logout">Logout</string>

    <string name = "str_dash_gift">Gift</string>
    <string name = "str_dash_calendar">Calendar</string>
    <string name = "str_dash_book">Book</string>
    <string name = "str_dash_reading">Reading</string>
...
